--- a/G1S1.BlazorServer/Pages/Books/Components/PageComponent.razor
+++ b/G1S1.BlazorServer/Pages/Books/Components/PageComponent.razor
@@ -1,14 +1,55 @@
-﻿<h3>Reutilizable</h3>
+﻿<MudPaper Class="pa-16 ma-2" Elevation="3">
+    <MudText Typo="Typo.h4">@BookName</MudText>
 
-<MudPaper Class="pa-16 ma-2" Elevation="3">
-    <MudText Typo="Typo.h5">@Id</MudText>
-    <MudText Typo="Typo.h6">@Title</MudText>
-    <MudText Typo="Typo.body2">@Content</MudText>
+    <MudText Typo="Typo.h5">Page: @Id</MudText>
+
+    @if (TitleFragment == null)
+    {
+        <MudText Color="Color.Error">Sin título</MudText>
+    }
+    else
+    {
+        @TitleFragment
+    }
+
+    @ContentFragment
+
+    <MudButton Variant="Variant.Filled" Color="Color.Info" OnClick="OnPrintClick">Imprimir</MudButton>
 </MudPaper>
 
 @code {
+    [CascadingParameter(Name = "BookName")] public string BookName { get; set; }
+
     [Parameter] public int Id { get; set; }
-    [Parameter] public string Title { get; set; }
-    [Parameter] public string Content { get; set; }
     [Parameter] public EventCallback<int> OnPagePrintClick { get; set; }
+
+    [Parameter] public RenderFragment TitleFragment { get; set; }
+    [Parameter] public RenderFragment ContentFragment { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        Console.WriteLine("OnInitializedAsync");
+    }
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        Console.WriteLine($"OnAfterRender: {firstRender}");
+    }
+
+    protected override async Task OnParametersSetAsync()
+    {
+        Console.WriteLine("OnParametersSetAsync");
+    }
+
+    protected override bool ShouldRender()
+    {
+        Console.WriteLine("ShouldRender");
+        return true;
+    }
+
+    private void OnPrintClick()
+    {
+        OnPagePrintClick.InvokeAsync(Id);
+    }
+
 }
