--- a/G1S1.BlazorServer/App.razor
+++ b/G1S1.BlazorServer/App.razor
@@ -1,4 +1,4 @@
-<MudThemeProvider />
+<MudThemeProvider Theme="BooksTheme.DefaultTheme" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
@@ -12,3 +12,4 @@
         </LayoutView>
     </NotFound>
 </Router>
+
