--- a/G1S1.BlazorServer/Pages/Books/Views/BooksView.razor
+++ b/G1S1.BlazorServer/Pages/Books/Views/BooksView.razor
@@ -1,43 +1,78 @@
 ﻿@page "/Books"
-@page "/Books/{BookId:int}/{BookName}"
+@*@page "/Books/{BookId:int}/{BookName}"*@
 
-@inject ISnackbar snackBar;
-@layout CenteredLayout
-
-@using G1S1.BlazorServer.Pages.Books.Components
-
-<p>Libro: @BookId - @BookName</p>
-
-<CascadingValue Name="BookName" Value="@BookName">
-    <PageComponent @ref="Page1" Id="1" OnPagePrintClick="OnPagePrintClick">
-        <ContentFragment>
-            Blazor sin fronteras
-        </ContentFragment>
-    </PageComponent>
-
-    <PageComponent Id="2" OnPagePrintClick="OnPagePrintClick">
-        <TitleFragment>
-            <MudText Color="Color.Primary">Indice</MudText>
-        </TitleFragment>
-        <ContentFragment>
-            Contenido
-        </ContentFragment>
-    </PageComponent>
-</CascadingValue>
-
-@code {
-    [Parameter] public int BookId { get; set; }
-    [Parameter] public string BookName { get; set; }
-
-    PageComponent Page1;
-
-    protected override async Task OnInitializedAsync()
+@*@if(Book != null)
     {
-        
-    }
+        <CascadingValue Name="Parameter1" Value="@Book">
+            <MudGrid Spacing="1">
+                <MudItem xs="6" sm="3" md="3" lg="3" xl="3" xxl="3">
+                    <PageComponent @ref="Page1" Id="1" OnPagePrintClick="OnPagePrintClick">
+                        <ContentFragment>
+                            Blazor sin fronteras
+                        </ContentFragment>
+                    </PageComponent>
+                </MudItem>
+                <MudItem xs="6" sm="3" md="3" lg="3" xl="3" xxl="3">
+                    <PageComponent Id="2" OnPagePrintClick="OnPagePrintClick">
+                        <TitleFragment>
+                            <MudText Color="Color.Primary">Indice</MudText>
+                        </TitleFragment>
+                        <ContentFragment>
+                            Contenido
+                        </ContentFragment>
+                    </PageComponent>
+                </MudItem>
+            </MudGrid>
+        </CascadingValue>
+    }*@
 
-    private void OnPagePrintClick(int Id)
-    {
-        snackBar.Add($"{BookName} | Impresión página: {Id}");
-    }
-}
+<MudText Typo="Typo.h5"><b>Books</b></MudText>
+<MudText Typo="Typo.subtitle1">Cree y administre los libros de la biblioteca.</MudText>
+
+<MudTable Items="@Books" Breakpoint="Breakpoint.MdAndDown" Dense="true" Hover="true" Class="mt-3"
+          Filter="new Func<Book, bool>(FilterFunc)" Loading="@isLoading" Elevation="0">
+    <ToolBarContent>
+        <MudGrid Spacing="0" Class="d-flex justify-space-between pb-5">
+            <MudItem xs="7" md="4" lg="4">
+                <MudTextField @bind-Value="searchString" Variant="Variant.Outlined" Placeholder="Buscar Libro" Clearable="true"
+                              Adornment="Adornment.End" AdornmentColor="Color.Primary" AdornmentIcon="@Icons.Material.Filled.Search"
+                              IconSize="Size.Medium" Margin="Margin.Dense" />
+            </MudItem>
+            <MudItem xs="5" md="3" lg="2" Class="d-flex justify-end">
+                <MudButton Variant="Variant.Filled" Color="Color.Info" StartIcon="@Icons.Material.Filled.AddCircle" OnClick="OnAddBook">Agregar Libro</MudButton>
+            </MudItem>
+        </MudGrid>
+    </ToolBarContent>
+    <HeaderContent>
+        <MudTh><MudTableSortLabel SortBy="new Func<Book, object>(x => x.BookId)">Id</MudTableSortLabel></MudTh>
+        <MudTh><MudTableSortLabel SortBy="new Func<Book, object>(x => x.Name)">Nombre</MudTableSortLabel></MudTh>
+        <MudTh Class="text-center">Autor</MudTh>
+        <MudTh Class="text-center">Páginas</MudTh>
+        <MudTh Class="text-center">Precio</MudTh>
+        <MudTh Class="text-center">Publicación</MudTh>
+        <MudTh Class="text-center">Estado</MudTh>
+        <MudTh Class="text-center">Acciones</MudTh>
+    </HeaderContent>
+    <RowTemplate>
+        <MudTd>@context.BookId</MudTd>
+        <MudTd>@context.Name</MudTd>
+        <MudTd>@context.AuthorId</MudTd>
+        <MudTd>@context.Pages</MudTd>
+        <MudTd>@context.Price</MudTd>
+        <MudTd>@context.PublishDate</MudTd>
+        <MudTd Class="text-center">
+            <MudSwitch T="bool" Checked=@(context.State) CheckedChanged="@(args => OnDeleteBook(context.BookId))" Color="Color.Info" />
+        </MudTd>
+        <MudTd Class="text-center">
+            <MudMenu Icon="@Icons.Material.Filled.MoreHoriz" Size="Size.Medium" OffsetX="false" OffsetY="true" Dense="true"
+                     Direction="Direction.Right" DisableRipple="true">
+                <MudMenuItem OnClick="@(args => OnViewBook(context.BookId))">Ver</MudMenuItem>
+                <MudMenuItem OnClick="@(args => OnEditBook(context.BookId))">Editar</MudMenuItem>
+                @*<MudMenuItem OnClick="@(args => OnDeletePelicula(context.IdPelicula))">Eliminar</MudMenuItem>*@
+            </MudMenu>
+        </MudTd>
+    </RowTemplate>
+    <PagerContent>
+        <MudTablePager InfoFormat="Página {first_item}-{last_item} de {all_items}" DisableRowsPerPage="true" PageSizeOptions="new int[] { 20, 100 }" />
+    </PagerContent>
+</MudTable>
