--- a/G1S1.BlazorServer/Pages/Index.razor
+++ b/G1S1.BlazorServer/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-@using Data
+@*@using Data
 @using G1S1.BlazorServer.Pages.Books.Views;
 
 @inject ISnackbar snackBar
@@ -44,4 +44,4 @@ else
         navigationManager.NavigateTo("/Books/1/Prueba");
         snackBar.Add($"Hasta pronto {name}");
     }
-}
+}*@
