--- a/G1S1.BlazorServer/_Imports.razor
+++ b/G1S1.BlazorServer/_Imports.razor
@@ -14,3 +14,6 @@
 
 @using G1S1.BlazorServer.Pages
 @using G1S1.BlazorServer.Model
+@using Blazored.FluentValidation
+
+@using G1S1.BlazorServer.Helpers
