--- a/G1S1.BlazorServer/Pages/_Host.cshtml
+++ b/G1S1.BlazorServer/Pages/_Host.cshtml
@@ -33,5 +33,6 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="~/js/Messages.js"></script>
 </body>
 </html>
